# lvlup

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: .env.example  main.py
backend/app/api/: __init__.py  category_router.py  courses_router.py  example.py  lessons_router.py  user_router.py
backend/app/core/: config.py  security.py
backend/app/database/: dependencies.py  models.py  repositories.py  session.py
backend/app/database/migrations/: env.py
backend/app/database/migrations/versions/: 2b0c4c1a5da5_initial_migration.py  a3a1f898ff37_initial_migration.py  be5fe3410588_initial_commit.py
backend/app/schemas/: category.py  courses.py  lessons.py  user.py
backend/app/utils/: images.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/fonts/: Roboto-VariableFont_wdth,wght-normal.js
frontend/src/: index.css  main.jsx
frontend/src/components/: ProtectedRoute.jsx  index.js
frontend/src/components/CourseCard/: CourseCard.jsx  courseCard.css
frontend/src/components/CourseForm/: CourseForm.jsx  CourseForm.module.css
frontend/src/components/CoursesList/: CoursesList.jsx  coursesList.css
frontend/src/components/Header/: Header.jsx  header.css
frontend/src/components/HeaderBig/: HeaderBig.jsx  headerBig.css
frontend/src/components/LessonForm/: LessonForm.jsx  (+1 more)
frontend/src/config/: api.js
frontend/src/hooks/: useAuth.js
frontend/src/services/: categoryService.js  courseService.js  index.js  lessonService.js
frontend/src/utils/: auth.js  theme.js
(+30 files in other folders)
